# server.js
@@ -14,14 +14,19 @@ app.use(express.json());
 
 // hook up the routers
 // property router handles all the routes that work with properties
-const propertyRouter = require('./routes/property');
-app.use('/properties', propertyRouter);
+// const propertyRouter = require('./routes/property');
+// app.use('/properties', propertyRouter);
 // swagger router handles any swagger calls
 const swaggerRouter = require('./routes/swagger');
 app.use('/swagger.json', swaggerRouter);
 // hello is misc functionality so throw it in its own router
 const helloRouter = require('./routes/hello');
 app.use('/hello', helloRouter);
+
+require('./routes/propertyPost')(app);
+require('./routes/propertyDelete')(app);
+require('./routes/propertyUpdate')(app);
+require('./routes/propertyFetch')(app);
 
 // setup the logger
 const utilities = require("./misc/utilities");
@@ -32,3 +37,5 @@ var server = app.listen(8080, function () {
 	console.log('API server is listening on port ' + 8080 + '...');
     logger.info('API server is listening on port ' + 8080 + '...');
 });
+
+module.exports = app;
